@@ -2,6 +2,8 @@
 	* Fix bug #33122: User confirmation with multiple usergroups (Thanks to Tomita Militaru)
 	* Fix bug #14930 (old bug tracker): Admin confirmation not working
 	* Fix bug #11191: enableAdminReview do not work without enableEmailConfirmation
+	* Fix bug #18169 (old bug tracker): Combination: no user confirmation, adminReview + user notification not possible
+	* Fix bug #11533 (old bug tracker): Documentation is incorrect for tx_srfeuserregister_tca::addTcaMarkers
 
 2012-03-26 Stanislas Rolland  <typo3@sjbr.ca>
 	* Fix bug #33279: Evaluation of arrays returns always false
